# jupyterlab-ghmath

./: .gitignore  LICENSE  MANIFEST.in  README.md  STATUS.md  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
docs/: install-verification.md  smoke.md
jupyterlab_ghmath/: __init__.py
src/: css.d.ts  index.ts  katexTypesetter.ts  latexPatch.ts  markdown-it-texmath.d.ts  parser.ts  renderer.ts
style/: base.css  index.css
tests/: katexTypesetter.test.ts  latexPatch.test.ts  parser.test.ts  renderer.test.ts
