[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterlab-ghmath"
version = "0.1.0"
description = "JupyterLab Markdown parser with GitHub-style KaTeX math delimiters"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Local" }]
dependencies = ["jupyterlab>=4.6.0,<5"]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = ["jupyterlab_ghmath"]

