[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterlab-ghmath"
version = "0.1.0"
description = "JupyterLab Markdown parser with GitHub-style KaTeX math delimiters"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Local" }]
# Runtime dependencies preserve the local JupyterLab math-rendering setup.
dependencies = ["jupyterlab>=4.6.0,<5", "jupyterlab-katex==3.4.0"]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Programming Language :: Python :: 3",
]

[tool.setuptools]
include-package-data = false
packages = ["jupyterlab_ghmath"]
